--- a/purchase_style.css
+++ b/purchase_style.css
@@ -35,3 +35,41 @@
     padding-top: 10px;
     padding-left: 10px;
 }
+form{
+    display: grid;
+    /*background-color: red;*/
+    width: calc(100%);
+    height: 300px;
+    grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
+    grid-template-rows: [row_1] 100px [row_2] 100px [row_3] 100px [row_4];
+}
+#form_content_1{
+    display: flex;
+    /*background-color: green;*/
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-content: center;
+    align-items: center;
+}
+#form_content_2{
+    display: flex;
+    /*background-color: green;*/
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    justify-content: center;
+    align-items: center;
+}
+#form_content_3{
+    display: flex;
+    /*background-color: green;*/
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    justify-content: center;
+    align-items: center;
+}
