--- a/purchase_style.css
+++ b/purchase_style.css
@@ -39,9 +39,9 @@ form{
     display: grid;
     /*background-color: red;*/
     width: calc(100%);
-    height: 300px;
+    height: 400px;
     grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 100px [row_2] 100px [row_3] 100px [row_4];
+    grid-template-rows: [row_1] 100px [row_2] 100px [row_3] 100px [row_4] 100px [row_5];
 }
 #form_content_1{
     display: flex;
@@ -64,6 +64,16 @@ form{
     align-items: center;
 }
 #form_content_3{
+    display: flex;
+    /*background-color: green;*/
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    justify-content: center;
+    align-items: center;
+}
+#form_content_4{
     display: flex;
     /*background-color: green;*/
     grid-column-start: 2;
