--- a/introduction_style.css
+++ b/introduction_style.css
@@ -13,6 +13,7 @@
     flex-grow: 1;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
 }
 .index{
     flex-grow: 4;
