--- a/purchase_style.css
+++ b/purchase_style.css
@@ -13,6 +13,7 @@
     flex-grow: 1;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
 }
 .index{
     flex-grow: 4;
@@ -41,30 +42,61 @@ form{
     width: calc(100%);
     height: 400px;
     grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 100px [row_2] 100px [row_3] 100px [row_4] 100px [row_5];
+    grid-template-rows: [row_2] 100px [row_2] 50px [row_3] 50px [row_4] 50px [row_5] 50px [row_6] 50px [row_7];
 }
 #form_content_1{
-    display: flex;
-    /*background-color: green;*/
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    justify-content: center;
-    align-items: center;
-    margin-right: 10px;
-}
-#form_content_2{
-    display: flex;
+    display: grid;
     /*background-color: green;*/
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
+    grid-template-columns: [column_1] 4fr [column_2] 1fr [column_3] 1fr [column_4] 4fr [column_5];
+    grid-template-rows: [row_1] 50px [row_2];
     justify-content: center;
     align-items: center;
 }
-#form_line_1{
+#sliced_meat_title{
+    /*background-color: red;*/
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+}
+#sliced_meat{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#form_content_2{
+    display: grid;
+    /*background-color: green;*/
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    grid-template-columns: [column_1] 4fr [column_2] 1fr [column_3] 1fr [column_4] 4fr [column_5];
+    grid-template-rows: [row_1] 50px [row_2];
+    justify-content: center;
+    align-items: center;
+}
+#item2_title{
+    /*background-color: red;*/
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+}
+#item2{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+/*#form_line_1{
     display: flex;
     grid-column-start: 2;
     grid-column-end: 3;
@@ -72,24 +104,76 @@ form{
     grid-row-end: 2;
     justify-content: center;
     align-items: center;
-}
+}*/
 #form_content_3{
-    display: flex;
+    display: grid;
     /*background-color: green;*/
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 4;
     grid-row-end: 5;
+    grid-template-columns: [column_1] 4fr [column_2] 1fr [column_3] 1fr [column_4] 4fr [column_5];
+    grid-template-rows: [row_1] 50px [row_2];
     justify-content: center;
     align-items: center;
 }
+#item3_title{
+    /*background-color: red;*/
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+}
+#item3{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
 #form_content_4{
-    display: flex;
+    display: grid;
     /*background-color: green;*/
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 4;
+    grid-row-start: 5;
+    grid-row-end: 6;
+    grid-template-columns: [column_1] 4fr [column_2] 1fr [column_3] 1fr [column_4] 4fr [column_5];
+    grid-template-rows: [row_1] 50px [row_2];
     justify-content: center;
     align-items: center;
+}
+#total_title{
+    /*background-color: red;*/
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+}
+#total{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#form_content_5{
+    display: flex;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 6;
+    grid-row-end: 7;
+    justify-content: center;
+    align-items: center;
+}
+.gap_50{
+    width: 50px;
+}
+#form_title{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+    font-size: 30;
 }
