--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     flex-grow: 1;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
 }
 .index{
     flex-grow: 4;
