--- a/purchase_style.css
+++ b/purchase_style.css
@@ -40,23 +40,23 @@ form{
     display: grid;
     /*background-color: red;*/
     width: calc(100%);
-    height: 400px;
-    grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_2] 100px [row_2] 50px [row_3] 50px [row_4] 50px [row_5] 50px [row_6] 50px [row_7];
+    height: 450px;
+    grid-template-columns: [column_1] 1fr [column_2] 3fr [column_3] 3fr [column_4] 1fr [column_5];
+    grid-template-rows: [row_1] 100px [row_2] 50px [row_3] 50px [row_4] 50px [row_5] 50px [row_6] 50px [row_7] 50px [row_8];
 }
-#form_content_1{
-    display: grid;
+#H1{
     /*background-color: green;*/
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
-    grid-template-columns: [column_1] 4fr [column_2] 1fr [column_3] 1fr [column_4] 4fr [column_5];
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
     grid-template-rows: [row_1] 50px [row_2];
     justify-content: center;
     align-items: center;
 }
-#sliced_meat_title{
+#H1_label{
     /*background-color: red;*/
     grid-column-start: 2;
     grid-column-end: 3;
@@ -64,25 +64,25 @@ form{
     grid-row-end: 2;
     text-align: center;
 }
-#sliced_meat{
+#H1_input{
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
 }
-#form_content_2{
-    display: grid;
+#H2{
     /*background-color: green;*/
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 4;
-    grid-template-columns: [column_1] 4fr [column_2] 1fr [column_3] 1fr [column_4] 4fr [column_5];
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
     grid-template-rows: [row_1] 50px [row_2];
     justify-content: center;
     align-items: center;
 }
-#item2_title{
+#H2_label{
     /*background-color: red;*/
     grid-column-start: 2;
     grid-column-end: 3;
@@ -90,7 +90,7 @@ form{
     grid-row-end: 2;
     text-align: center;
 }
-#item2{
+#H2_input{
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 1;
@@ -105,19 +105,19 @@ form{
     justify-content: center;
     align-items: center;
 }*/
-#form_content_3{
-    display: grid;
+#H3{
     /*background-color: green;*/
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 4;
     grid-row-start: 4;
     grid-row-end: 5;
-    grid-template-columns: [column_1] 4fr [column_2] 1fr [column_3] 1fr [column_4] 4fr [column_5];
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
     grid-template-rows: [row_1] 50px [row_2];
     justify-content: center;
     align-items: center;
 }
-#item3_title{
+#H3_label{
     /*background-color: red;*/
     grid-column-start: 2;
     grid-column-end: 3;
@@ -125,44 +125,44 @@ form{
     grid-row-end: 2;
     text-align: center;
 }
-#item3{
+#H3_input{
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
-}
-#form_content_4{
-    display: grid;
-    /*background-color: green;*/
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 5;
-    grid-row-end: 6;
-    grid-template-columns: [column_1] 4fr [column_2] 1fr [column_3] 1fr [column_4] 4fr [column_5];
-    grid-template-rows: [row_1] 50px [row_2];
-    justify-content: center;
-    align-items: center;
-}
-#total_title{
-    /*background-color: red;*/
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    text-align: center;
 }
 #total{
+    /*background-color: green;*/
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 6;
+    grid-row-end: 7;
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
+    grid-template-rows: [row_1] 50px [row_2];
+    justify-content: center;
+    align-items: center;
+}
+#total_label{
+    /*background-color: red;*/
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+}
+#total_input{
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
 }
-#form_content_5{
+#submit{
     display: flex;
     grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 6;
-    grid-row-end: 7;
+    grid-column-end: 4;
+    grid-row-start: 7;
+    grid-row-end: 8;
     justify-content: center;
     align-items: center;
 }
@@ -171,9 +171,101 @@ form{
 }
 #form_title{
     grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
     text-align: center;
     font-size: 30;
+}
+#email{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
+    grid-template-rows: [row_1] 1fr [row_2];
+    justify-content: center;
+    align-items: center;
+}
+#email_label{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#email_input{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#name{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
+    grid-template-rows: [row_1] 1fr [row_2];
+    justify-content: center;
+    align-items: center;
+}
+#name_label{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#name_input{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#contact{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
+    grid-template-rows: [row_1] 1fr [row_2];
+    justify-content: center;
+    align-items: center;
+}
+#contact_label{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#contact_input{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#address{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 5;
+    grid-row-end: 6;
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
+    grid-template-rows: [row_1] 1fr [row_2];
+    justify-items: stretch;
+    align-items: center;
+}
+#address_label{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+#address_input{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
