change layout of purchase and add introduction contents

--- a/style.css
+++ b/style.css
@@ -4,20 +4,20 @@
     background-color: aquamarine;
     flex-wrap: wrap;
     align-items: center;
-    align-content: stretch;
+    align-content: center;
     position: sticky;
     top: 0;
 }
 body{
-    background-image: url("./asset/305484008_565033565419882_5034076824293787729_n.jpeg");
+    background-image: url("./asset/eat_grass_2.jpg");
     background-position: center;
+    background-size: cover;
 }
 .icon{
     display: flex;
     flex-grow: 1;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
 }
 .index{
     flex-grow: 4;
@@ -26,10 +26,10 @@ body{
     display: grid;
     /*background-color: gray;*/
     width: calc(100%);
-    height: 1100px;
-    grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 100px [row_2] 600px [row_3] 300px [row_4] 100px [row_5];
-    background-color: transparent;
+    height: 900px;
+    grid-template-columns: [column_1] 1fr [column_2] 3fr [column_3] 1fr [column_4];
+    grid-template-rows: [row_1] 100px [row_2] 600px [row_3] 100px [row_4] 100px [row_5];
+    background-color: rgba(255, 255, 255, 0.5);
 }
 #about_us_content_1{
     display: flex;
@@ -54,14 +54,16 @@ body{
     /*background-color: red;*/
 }
 #about_us_content_3{
-    display: flex;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
+    /*background-color: red;*/
     justify-content: center;
     align-items: center;
-    /*background-color: red;*/
+}
+.paragraph{
+    text-indent: 2em;
 }
 #about_us_content_4{
     display: flex;
