--- a/introduction_style.css
+++ b/introduction_style.css
@@ -22,9 +22,9 @@
     display: grid;
     /*background-color: gray;*/
     width: calc();
-    height: 700px;
+    height: 1000px;
     grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 100px [row_2] 600px [row_3];
+    grid-template-rows: [row_1] 100px [row_2] 900px [row_3];
 }
 #introduction_content_1{
     display: flex;
@@ -36,6 +36,16 @@
     justify-content: center;
     align-items: center;
     font-size: 30px;
+}
+#introduction_content_2{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+.paragraph{
+    text-indent: 2em;
+    margin-left: 2em;
 }
 
 .bottom{
