--- a/purchase_style.css
+++ b/purchase_style.css
@@ -40,9 +40,9 @@ form{
     display: grid;
     /*background-color: red;*/
     width: calc(100%);
-    height: 450px;
+    height: 600px;
     grid-template-columns: [column_1] 1fr [column_2] 3fr [column_3] 3fr [column_4] 1fr [column_5];
-    grid-template-rows: [row_1] 100px [row_2] 50px [row_3] 50px [row_4] 50px [row_5] 50px [row_6] 50px [row_7] 50px [row_8];
+    grid-template-rows: [row_1] 100px [row_2] 50px [row_3] 50px [row_4] 50px [row_5] 50px [row_6] 50px [row_7] 50px [row_8] 50px [row_9] 50px [row_10] 50px [row_11];
 }
 #H1{
     /*background-color: green;*/
@@ -51,24 +51,27 @@ form{
     grid-row-start: 2;
     grid-row-end: 3;
     display: grid;
-    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
     grid-template-rows: [row_1] 50px [row_2];
-    justify-content: center;
+    justify-items: center;
     align-items: center;
+    margin-left: 10px;
 }
 #H1_label{
     /*background-color: red;*/
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+    justify-self: start;
+}
+#H1_select{
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-    text-align: center;
-}
-#H1_input{
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    justify-self: stretch;
 }
 #H2{
     /*background-color: green;*/
@@ -77,24 +80,27 @@ form{
     grid-row-start: 3;
     grid-row-end: 4;
     display: grid;
-    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
     grid-template-rows: [row_1] 50px [row_2];
     justify-content: center;
     align-items: center;
+    margin-left: 10px;
 }
 #H2_label{
     /*background-color: red;*/
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+    justify-self: start;
+}
+#H2_select{
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-    text-align: center;
-}
-#H2_input{
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    justify-self: stretch;
 }
 /*#form_line_1{
     display: flex;
@@ -112,35 +118,154 @@ form{
     grid-row-start: 4;
     grid-row-end: 5;
     display: grid;
-    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
     grid-template-rows: [row_1] 50px [row_2];
     justify-content: center;
     align-items: center;
+    margin-left: 10px;
 }
 #H3_label{
     /*background-color: red;*/
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+    justify-self: start;
+}
+#H3_select{
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-    text-align: center;
+    justify-self: stretch;
 }
-#H3_input{
+#H4{
+    /*background-color: green;*/
     grid-column-start: 3;
     grid-column-end: 4;
+    grid-row-start: 5;
+    grid-row-end: 6;
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
+    grid-template-rows: [row_1] 50px [row_2];
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+}
+#H4_label{
+    /*background-color: red;*/
+    grid-column-start: 1;
+    grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 2;
+    text-align: center;
+    justify-self: start;
+}
+#H4_select{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-self: stretch;
+}
+#H5{
+    /*background-color: green;*/
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 6;
+    grid-row-end: 7;
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
+    grid-template-rows: [row_1] 50px [row_2];
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+}
+#H5_label{
+    /*background-color: red;*/
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+    justify-self: start;
+}
+#H5_select{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-self: stretch;
+}
+#H6{
+    /*background-color: green;*/
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 7;
+    grid-row-end: 8;
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
+    grid-template-rows: [row_1] 50px [row_2];
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+}
+#H6_label{
+    /*background-color: red;*/
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+    justify-self: start;
+}
+#H6_select{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-self: stretch;
+}
+#H7{
+    /*background-color: green;*/
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 8;
+    grid-row-end: 9;
+    display: grid;
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
+    grid-template-rows: [row_1] 50px [row_2];
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+}
+#H7_label{
+    /*background-color: red;*/
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    text-align: center;
+    justify-self: start;
+}
+#H7_select{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-self: stretch;
 }
 #total{
     /*background-color: green;*/
     grid-column-start: 2;
     grid-column-end: 4;
-    grid-row-start: 6;
-    grid-row-end: 7;
+    grid-row-start: 9;
+    grid-row-end: 10;
     display: grid;
     grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
     grid-template-rows: [row_1] 50px [row_2];
-    justify-content: center;
+    justify-items: center;
     align-items: center;
 }
 #total_label{
@@ -150,19 +275,21 @@ form{
     grid-row-start: 1;
     grid-row-end: 2;
     text-align: center;
+    justify-self: center;
 }
 #total_input{
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 2;
+    justify-self: stretch;
 }
 #submit{
     display: flex;
     grid-column-start: 2;
     grid-column-end: 4;
-    grid-row-start: 7;
-    grid-row-end: 8;
+    grid-row-start: 10;
+    grid-row-end: 11;
     justify-content: center;
     align-items: center;
 }
@@ -183,22 +310,24 @@ form{
     grid-row-start: 2;
     grid-row-end: 3;
     display: grid;
-    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
     grid-template-rows: [row_1] 1fr [row_2];
-    justify-content: center;
+    justify-items: center;
     align-items: center;
 }
 #email_label{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-self: start;
+}
+#email_input{
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-}
-#email_input{
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    justify-self: stretch;
 }
 #name{
     grid-column-start: 2;
@@ -206,22 +335,24 @@ form{
     grid-row-start: 3;
     grid-row-end: 4;
     display: grid;
-    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
     grid-template-rows: [row_1] 1fr [row_2];
     justify-content: center;
     align-items: center;
 }
 #name_label{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-self: start;
+}
+#name_input{
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-}
-#name_input{
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    justify-self: stretch;
 }
 #contact{
     grid-column-start: 2;
@@ -229,22 +360,24 @@ form{
     grid-row-start: 4;
     grid-row-end: 5;
     display: grid;
-    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3] 1fr [column_4] 1fr [column_5];
+    grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
     grid-template-rows: [row_1] 1fr [row_2];
     justify-content: center;
     align-items: center;
 }
 #contact_label{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    justify-self: start;
+}
+#contact_input{
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-}
-#contact_input{
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    justify-self: stretch;
 }
 #address{
     grid-column-start: 2;
@@ -254,7 +387,7 @@ form{
     display: grid;
     grid-template-columns: [column_1] 1fr [column_2] 1fr [column_3];
     grid-template-rows: [row_1] 1fr [row_2];
-    justify-items: stretch;
+    justify-items: center;
     align-items: center;
 }
 #address_label{
@@ -262,10 +395,12 @@ form{
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 2;
+    justify-self: start;
 }
 #address_input{
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
+    justify-self: stretch;
 }
