--- a/introduction_style.css
+++ b/introduction_style.css
@@ -4,7 +4,7 @@
     background-color: aquamarine;
     flex-wrap: wrap;
     align-items: center;
-    align-content: stretch;
+    align-content: center;
     position: sticky;
     top: 0;
 }
@@ -13,7 +13,6 @@
     flex-grow: 1;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
 }
 .index{
     flex-grow: 4;
