--- a/introduction_style.css
+++ b/introduction_style.css
@@ -21,9 +21,9 @@
     display: grid;
     /*background-color: gray;*/
     width: calc();
-    height: 1000px;
+    height: 1100px;
     grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 100px [row_2] 900px [row_3];
+    grid-template-rows: [row_1] 100px [row_2] 1000px [row_3];
 }
 #introduction_content_1{
     display: flex;
@@ -41,6 +41,7 @@
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
+    font-size: 20px;
 }
 .paragraph{
     text-indent: 2em;
