--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@
     align-content: center;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 body{
     background-image: url("./asset/eat_grass_2.jpg");
     background-position: center;
     background-size: cover;
+    margin: 0;
 }
 .icon{
     display: flex;
@@ -26,9 +28,9 @@ body{
     display: grid;
     /*background-color: gray;*/
     width: calc(100%);
-    height: 900px;
+    height: 950px;
     grid-template-columns: [column_1] 1fr [column_2] 3fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 100px [row_2] 600px [row_3] 100px [row_4] 100px [row_5];
+    grid-template-rows: [row_1] 100px [row_2] 600px [row_3] 150px [row_4] 100px [row_5];
     background-color: rgba(255, 255, 255, 0.5);
 }
 #about_us_content_1{
@@ -45,13 +47,67 @@ body{
 }
 #about_us_content_2{
     display: flex;
+    height: 600px;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
+    /*background-color: red;*/
     justify-content: center;
     align-items: center;
-    /*background-color: red;*/
+    position: relative;
+}
+#about_us_content_2 div{
+    -webkit-animation: round 20s linear infinite;
+    animation: round 20s linear infinite;
+    position: absolute;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    object-fit: cover;
+}
+@keyframes round{
+    5%{
+        opacity: 1;
+        filter: alpha(opacity=100);
+    }
+    25%{
+        opacity: 1;
+        filter: alpha(opacity=100);
+    }
+    30%{
+        opacity: 0;
+        filter: alpha(opacity=0);
+    }
+}
+@-webkit-keyframes round{
+    5%{
+        opacity: 1;
+        filter: alpha(opacity=100);
+    }
+    25%{
+        opacity: 1;
+        filter: alpha(opacity=100);
+    }
+    30%{
+        opacity: 0;
+        filter: alpha(opacity=0);
+    }
+}
+#about_us_content_2 div:nth-child(4){
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
+}
+#about_us_content_2 div:nth-child(3){
+    -webkit-animation-delay: 5s;
+    animation-delay: 5s;
+}
+#about_us_content_2 div:nth-child(2){
+    -webkit-animation-delay: 10s;
+    animation-delay: 10s;
+}
+#about_us_content_2 div:nth-child(1){
+    -webkit-animation-delay: 15s;
+    animation-delay: 15s;
 }
 #about_us_content_3{
     grid-column-start: 2;
@@ -61,6 +117,7 @@ body{
     /*background-color: red;*/
     justify-content: center;
     align-items: center;
+    font-size: 20;
 }
 .paragraph{
     text-indent: 2em;
@@ -81,6 +138,7 @@ body{
     width: 100px;
     height: 50px;
     text-align: center;
+    font-size: 20;
 }
 .bottom{
     background-color: gray;
