--- a/introduction_style.css
+++ b/introduction_style.css
@@ -1,3 +1,7 @@
+html{
+    width: 100%;
+    height: 100%;
+}
 #header{
     display: flex;
     height: 50px;
@@ -9,6 +13,8 @@
     top: 0;
 }
 body{
+    width: 100%;
+    height: 100%;
     margin: 0;
 }
 .icon{
@@ -23,13 +29,15 @@ body{
 #introduction{
     display: grid;
     /*background-color: gray;*/
-    width: calc();
-    height: 1100px;
+    width: 100%;
+    height: 100%;
     grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 100px [row_2] 1000px [row_3];
+    grid-template-rows: [row_1] 2fr [row_2] 5fr [row_3] 2.5fr [row_4];
 }
 #introduction_content_1{
     display: flex;
+    width: 100%;
+    height: 100%;
     /*background-color: green;*/
     grid-column-start: 2;
     grid-column-end: 3;
@@ -40,6 +48,8 @@ body{
     font-size: 30px;
 }
 #introduction_content_2{
+    width: 100%;
+    height: 100%;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
@@ -50,11 +60,14 @@ body{
     text-indent: 2em;
     margin-left: 2em;
 }
-
 .bottom{
+    width: 100%;
+    height: 100%;
     background-color: gray;
-    width: calc(100%);
-    height: 200px;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
 #bottom_about{
     color: lightblue;
