--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+    width: 100%;
+    height: 100%;
+}
 #header{
     display: flex;
     height: 50px;
@@ -8,12 +12,15 @@
     position: sticky;
     top: 0;
     z-index: 1;
+    width: 100%;
 }
 body{
     background-image: url("./asset/eat_grass_2.jpg");
     background-position: center;
     background-size: cover;
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 .icon{
     display: flex;
@@ -24,13 +31,14 @@ body{
 .index{
     flex-grow: 4;
 }
+
 #about_us{
     display: grid;
-    /*background-color: gray;*/
-    width: calc(100%);
-    height: 950px;
+    /* background-color: red; */
+    width: 100%;
+    height: 100%;
     grid-template-columns: [column_1] 1fr [column_2] 3fr [column_3] 1fr [column_4];
-    grid-template-rows: [row_1] 100px [row_2] 600px [row_3] 150px [row_4] 100px [row_5];
+    grid-template-rows: [row_1] 2fr [row_2] 8fr [row_3] 2fr [row_4] 2fr [row_5] 5fr [row_6];
     background-color: rgba(255, 255, 255, 0.5);
 }
 #about_us_content_1{
@@ -44,10 +52,12 @@ body{
     font-size: 30px;
     justify-content: center;
     align-items: center;
+    height: 100%;
+    width: 100%;
 }
 #about_us_content_2{
+   /*background-color: red;*/
     display: flex;
-    height: 600px;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
@@ -56,6 +66,9 @@ body{
     justify-content: center;
     align-items: center;
     position: relative;
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
 }
 #about_us_content_2 div{
     -webkit-animation: round 20s linear infinite;
@@ -63,7 +76,9 @@ body{
     position: absolute;
     opacity: 0;
     filter: alpha(opacity=0);
-    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 @keyframes round{
     5%{
@@ -93,6 +108,11 @@ body{
         filter: alpha(opacity=0);
     }
 }
+#about_us_content_2 img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 #about_us_content_2 div:nth-child(4){
     -webkit-animation-delay: 0s;
     animation-delay: 0s;
@@ -118,6 +138,8 @@ body{
     justify-content: center;
     align-items: center;
     font-size: 20;
+    height: 100%;
+    width: 100%;
 }
 .paragraph{
     text-indent: 2em;
@@ -141,9 +163,13 @@ body{
     font-size: 20;
 }
 .bottom{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 5;
+    grid-row-end: 6;
     background-color: gray;
-    width: calc(100%);
-    height: 200px;
+    height: 100%;
+    width: 100%;
 }
 #bottom_about{
     color: lightblue;
