--- a/purchase_style.css
+++ b/purchase_style.css
@@ -15,6 +15,8 @@ html{
 }
 body{
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 .icon{
     display: flex;
@@ -31,7 +33,7 @@ body{
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 1fr [column_4];
+    grid-template-columns: [column_1] 1fr [column_2] 10fr [column_3] 1fr [column_4];
     grid-template-rows: [row_1] 1fr [row_2] 5fr [row_3] 1fr [row_4];
 }
 form{
@@ -43,7 +45,7 @@ form{
     /*background-color: red;*/
     width: 100%;
     height: 100%;
-    grid-template-columns: [column_1] 1fr [column_2] 3fr [column_3] 3fr [column_4] 1fr [column_5];
+    grid-template-columns: [column_1] 1fr [column_2] 5fr [column_3] 5fr [column_4] 1fr [column_5];
     grid-template-rows: [row_1] 100px [row_2] 50px [row_3] 50px [row_4] 50px [row_5] 50px [row_6] 50px [row_7] 50px [row_8] 50px [row_9] 50px [row_10] 50px [row_11];
 }
 #form_title{
