--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html{
     width: 100%;
-    height: 150%;
-    max-height: 200%;
+    height: 200%;
+    max-height: 300%;
 }
 #header{
     display: flex;
@@ -26,8 +26,13 @@ body{
 .icon{
     display: flex;
     flex-grow: 1;
+    height: 100%;
     justify-content: center;
     align-items: center;
+}
+.icon img{
+    height: 100%;
+    width: 100%;
 }
 .index{
     flex-grow: 4;
@@ -177,11 +182,11 @@ body{
     color: lightblue;
     padding-top: 10px;
     padding-left: 10px;
-    font-size: 30;
+    font-size: 5vmin;
 }
 #bottom_content{
     color: blue;
-    font-size: 16;
+    font-size: 3vmin;
     padding-top: 10px;
     padding-left: 10px;
 }
