--- a/share_style.css
+++ b/share_style.css
@@ -20,15 +20,12 @@ body{
     width: 100%;
 }
 .icon{
-    display: flex;
     flex-grow: 1;
     height: 100%;
-    justify-content: center;
-    align-items: center;
 }
 .icon img{
     height: 100%;
-    width: 100%;
+    margin-left: 1vmin;
 }
 .index{
     flex-grow: 4;
