--- a/style.css
+++ b/style.css
@@ -22,15 +22,12 @@ body{
     margin: 0;
 }
 .icon{
-    display: flex;
     flex-grow: 1;
     height: 100%;
-    justify-content: center;
-    align-items: center;
 }
 .icon img{
     height: 100%;
-    width: 100%;
+    margin-left: 1vmin;
 }
 .index{
     flex-grow: 4;
